# json

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: json-config.cmake.in
include/: json.h  json.hpp
src/: json.cpp  jsonConfig.cmake.in
tests/: CMakeLists.txt  test_json.cpp
