add_executable(json_lib_tests test_json.cpp)
add_dependencies(json_lib_tests json)
target_link_libraries(json_lib_tests PRIVATE json)
if(MSVC)
    target_compile_options(json_lib_tests PRIVATE /W4)
else()
    target_compile_options(json_lib_tests PRIVATE -Wall -Wextra -Wpedantic -fsanitize=undefined)
    if (ENABLE_COVERAGE)
        if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            target_compile_options(json_lib_tests PRIVATE --coverage)
            target_link_libraries(json_lib_tests PUBLIC gcov)
        endif()
    endif()
endif()

add_test(NAME JSON_LibTest COMMAND json_lib_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})